--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 excerpt_separator: ""
-pygments: rouge
+pygments: null
 markdown: kramdown
 url: https://lawsonproject-chapter2.github.io
 title: The Lawson Project
 tagline: A look back at the TV Show "Small Wonder"
 description: My awesome new site
 paginate: 5
+gems: [jekyll-paginate]
